Update HM Method with Predicate with "eo:bands"